my first version

--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Cloner News</title>
-  </head>
-  <body>
-    <nav>
-      <div class="nav-logo">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Cloner News</title>
+</head>
+
+<body>
+  <nav>
+    <div class="nav-logo">
+      <a href="index.html">Cloner News</a>
+    </div>
+    <ul>
+      <li><a href="/"> Posts</a></li>
+      <li><a href="Comments">Comments</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <select name="" id="choice-type">
+      <option value="story">story</option>
+      <option value="comment">comments</option>
+      <option value="polls">polls</option>
+      <option value="jobs">jobs</option>
+    </select>
+    <div class="container">
+
+    </div>
+
+  </main>
+  <footer>
+    <div class="footer-wrapper">
+      <div class="footer-logo">
         <a href="index.html">Cloner News</a>
       </div>
-      <ul>
-        <li><a href="/"> Posts</a></li>
-        <li><a href="Comments">Comments</a></li>
-      </ul>
-    </nav>
-
-    <main>
-      <div class="container">
-
+      <div class="footer-menu">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas totam nesciunt velit? Fugit voluptas, vel, nobis
+        voluptatum pariatur
       </div>
+  </footer>
+  <script src="./script.js"></script>
+</body>
 
-    </main>
-    <footer>
-      <div class="footer-wrapper">
-        <div class="footer-logo">
-          <a href="index.html">Cloner News</a>
-        </div>
-        <div class="footer-menu">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas totam nesciunt velit? Fugit voluptas, vel, nobis voluptatum pariatur 
-      </div>
-    </footer>
-    <script src="./script.js"></script>
-  </body>
 </html>
