--- a/index.html
+++ b/index.html
@@ -7,32 +7,24 @@
     <link rel="stylesheet" href="style.css" />
     <title>Cloner News</title>
   </head>
+
   <body>
     <nav>
       <div class="nav-logo">
         <a href="index.html">Cloner News</a>
       </div>
       <ul>
-        <li><a href="/"> Posts</a></li>
-        <li><a href="Comments">Comments</a></li>
+        <li><a class="link-item active" href="#">News</a></li>
+        <li><a class="link-item" href="#">Jobs</a></li>
+        <li><a class="link-item" href="#">Stories</a></li>
+        <li><a class="link-item" href="#">Polls</a></li>
       </ul>
     </nav>
-
     <main>
       <div class="container">
-
       </div>
-
     </main>
-    <footer>
-      <div class="footer-wrapper">
-        <div class="footer-logo">
-          <a href="index.html">Cloner News</a>
-        </div>
-        <div class="footer-menu">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas totam nesciunt velit? Fugit voluptas, vel, nobis voluptatum pariatur 
-      </div>
-    </footer>
+    <footer></footer>
     <script src="./script.js"></script>
   </body>
 </html>
