not working yet

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <main>
     <select name="" id="choice-type">
+      <option value="live">live news</option>
       <option value="story">story</option>
       <option value="comment">comments</option>
       <option value="polls">polls</option>
@@ -42,8 +43,8 @@
       <button id="pageSize">5</button>
     </div>
     </div>
-
   </main>
+  <button type="submit" id="More">More</button>
   <footer>
     <div class="footer-wrapper">
       <div class="footer-logo">
