Revert "my first version"
This reverts commit a3ea830b205739acf962553747fea4e2847a00fa.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <button id="pageSize">5</button>
     </div>
     </div>
+    <div id="container">
+    </div>
   </main>
   <button type="submit" id="More">More</button>
   <footer>
