add prereloader and fix front

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <a href="index.html">Cloner News</a>
       </div>
       <ul>
-        <li><a class="link-item active" href="#">News</a></li>
-        <li><a class="link-item" href="#">Jobs</a></li>
-        <li><a class="link-item" href="#">Stories</a></li>
-        <li><a class="link-item" href="#">Polls</a></li>
+        <li><a class="link-item active" data-route="new" href="#">News</a></li>
+        <li><a class="link-item" data-route="job" href="#">Jobs</a></li>
+        <li><a class="link-item" data-route="story" href="#">Stories</a></li>
+        <li><a class="link-item" data-route="poll" href="#">Polls</a></li>
       </ul>
     </nav>
     <main>
