--- a/index.html
+++ b/index.html
@@ -28,20 +28,8 @@
       <option value="polls">polls</option>
       <option value="jobs">jobs</option>
     </select>
-    <select name="" id="data-per-page">
-      <option value="5">5</option>
-      <option value="10">10</option>
-      <option value="20" selected>20</option>
-      <option value="50">50</option>
-    </select>
-    <div class="pagination" id="pagination">
-      <button class="pagination-btn">&lt;&lt;</button>
-      <button class="pagination-btn" name="move" value="-1">&lt;</button>
-      <span id="current-page">1</span>
-      <button class="pagination-btn" name="move" value="1">&gt;</button>
-      <button class="pagination-btn">&gt;&gt;</button>
-      <button id="pageSize">5</button>
-    </div>
+    <div class="container">
+
     </div>
   </main>
   <button type="submit" id="More">More</button>
