place holder pagination data per page working

--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
       <option value="50">50</option>
     </select>
     <div class="pagination" id="pagination">
-      <button class="pagination-btn">&lt;&lt;</button>
-      <button class="pagination-btn" name="move" value="-1">&lt;</button>
+      <button class="pagination-btn" id="first-page">&lt;&lt;</button>
+      <button class="pagination-btn" id="prev-page" name="move" value="-1">&lt;</button>
       <span id="current-page">1</span>
-      <button class="pagination-btn" name="move" value="1">&gt;</button>
-      <button class="pagination-btn">&gt;&gt;</button>
-      <button id="pageSize">5</button>
+      <button class="pagination-btn" id="next-page" name="move" value="1">&gt;</button>
     </div>
     </div>
     <div id="container">
