add the futers from yousef branch

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <li><a class="link-item active" data-route="new" href="#">News</a></li>
         <li><a class="link-item" data-route="job" href="#">Jobs</a></li>
         <li><a class="link-item" data-route="story" href="#">Stories</a></li>
+        <li><a class="link-item" data-route="comment" href="#">Comments</a></li>
         <li><a class="link-item" data-route="poll" href="#">Polls</a></li>
       </ul>
     </nav>
     <main>
       <div class="container">
       </div>
+    <button type="submit" class="loading-more" id="More">More</button>
     </main>
     <footer></footer>
     <script src="./script.js"></script>
